Enable Java 25 tests on bots
Change-Id: I634333aa0cf4e5933c50660365b416a2c7e8741e